Add EAS configuration and update dependencies for network info

--- a/mobile/my-app/app.json
+++ b/mobile/my-app/app.json
@@ -16,7 +16,8 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.nikhadesagarika.myapp"
     },
     "web": {
       "bundler": "metro",
@@ -37,6 +38,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "47ca0f2b-28d0-4446-81ef-50ee1272b8a7"
+      }
     }
   }
 }
